Bug: 684853 Reviewer: Jay Wootton Comment: In the Administration page, the names of the actions in the left-hand panel should not wrap.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -545,6 +545,7 @@ a, a:visited, a:hover {
 {
 	margin: 5px;
 	padding: 2px;
+	white-space: nowrap;
 }
 
 .adminActionControlMouseOver
@@ -562,9 +563,9 @@ a, a:visited, a:hover {
 	background-color: #EAEBE8;
 	padding: 0 0 8px;
 	position: absolute;
-	overflow-y: auto;
-	overflow-x: hidden;
+	overflow: auto;
 	top: 8px;
+	width: 300px;
 	z-index: 100;
 	-moz-border-radius: 5px;
 	-webkit-border-radius: 5px;
@@ -579,6 +580,7 @@ a, a:visited, a:hover {
 	font-size: 0.85em;
 	font-weight: bold;
 	letter-spacing: 0.02em;
+	width: 100%;
 	-moz-border-radius-topleft: 5px;
 	-moz-border-radius-topright: 5px;
 	-webkit-border-top-left-radius: 5px;
